fix: fix footer bottom links layout issue

--- a/css/queries.css
+++ b/css/queries.css
@@ -456,6 +456,10 @@
     gap: 2.4rem;
   }
 
+  .footer__bottom-links {
+    gap: 0.8rem;
+  }
+
   /* All */
   .section__home-hero {
     padding-bottom: 3.6rem;
